fixe some z-index problemes

--- a/src/app.scss
+++ b/src/app.scss
@@ -42,7 +42,6 @@ section {
     scroll-snap-align: center;
     position: relative;
     overflow: hidden;
-    z-index: 1;
 
     .animation {
         position: absolute;
