--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -8,7 +8,6 @@ nav {
     height: 75px;
     max-width: 1250px;
     margin: auto;
-    z-index: 1000;
 
     @include sm {
         justify-content: end;
