--- a/src/components/contact/contact.scss
+++ b/src/components/contact/contact.scss
@@ -72,7 +72,7 @@
       position: absolute;
       display: flex;
       justify-content: center;
-      z-index: -1;
+      z-index: 1;
 
       svg {
         fill: transparent;
