--- a/src/components/portfolio/portfolio.scss
+++ b/src/components/portfolio/portfolio.scss
@@ -130,7 +130,7 @@
     text-align: center;
     color: orange;
     font-size: 36px;
-    z-index: 111;
+
 
     @include sm {
       padding-top: 60px;
